--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
 
         </div>
-        <a href="/img/Qaiser Khan-CV.pdf" class="btn">Download CV</a>
+        <a href="img/Qaiser Khan-CV.pdf" class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
@@ -99,7 +99,7 @@
             <div class="portfolio-layer">
                 <h4>Tik Tak Toe</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                 
             </div>
         </div>
@@ -108,7 +108,7 @@
             <div class="portfolio-layer">
                 <h4>CountDown</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/countdown/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/countdown/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
@@ -116,7 +116,7 @@
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
@@ -124,7 +124,7 @@
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
@@ -132,7 +132,7 @@
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
@@ -140,7 +140,7 @@
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="/Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
     </div>
