--- a/Projects/Word Counter/index.html
+++ b/Projects/Word Counter/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Word Counter Plus / Mini Text Analyzer</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Word Counter Plus</h1>
+        <div class="results">
+            <p>Words: <span id="wordCount">0</span></p>
+            <p>Characters: <span id="charCount">0</span></p>
+            <p>Sentences: <span id="sentenceCount">0</span></p>
+            <p>Paragraphs: <span id="paragraphCount">0</span></p>
+        </div>
+        <textarea id="textInput" placeholder="Type or paste your text here..."></textarea>
+        <div class="results">
+            
+            <p>Average Reading Time: <span id="readingTime">0</span> minutes</p>
+            <p>Longest Word: <span id="longestWord">None</span></p>
+            <p>Pronouns: <span id="pronounCount">0</span></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
