--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         <div class="portfolio-box">
             <img src="img/3 (1).jpg" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
+                <h4>Word Counter</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/Word Counter/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
