--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         <div class="portfolio-box">
             <img src="img/4 (1).jpg" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
+                <h4>ToDo List</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, molestiae!</p>
-                <a href="Projects/TikTak Toe/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="Projects/Todo List/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="portfolio-box">
